--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,8 @@
                 <div class="card">
                     <div class="header">
                         <h2>Welcome to Comodity Price Predict - Pasar Kramat Kota Cirebon</h2>
-                        <p class="mt-3" style="margin-bottom: unset;">Comodity Available : Cabai Merah Besar, Cabai Merah Keriting, Cabai Rawit Hijau, Cabai Rawit Merah, Bawang Merah</p>
+                        <p class="mt-3" style="margin-bottom: unset;">Comodity Available : Cabai Merah Besar, Cabai
+                            Merah Keriting, Cabai Rawit Hijau, Cabai Rawit Merah, Bawang Merah</p>
                     </div>
                 </div>
             </div>
@@ -142,4 +143,8 @@
 
     </div>
 </div>
+{% endblock %}
+
+{% block script %}
+    <script src="{{ url_for('static', filename='index.js') }}"></script>
 {% endblock %}
