fix predict cabai rawit merah

--- a/templates/predict.html
+++ b/templates/predict.html
@@ -38,7 +38,7 @@
                                         <option value="cabai_merah_besar">Cabai Merah Besar</option>
                                         <option value="cabai_merah_keriting">Cabai Merah Keriting</option>
                                         <option value="cabai_rawit_hijau">Cabai Rawit Hijau</option>
-                                        <option value="cabai_rawit_hijau">Cabai Rawit Merah</option>
+                                        <option value="cabai_rawit_merah">Cabai Rawit Merah</option>
                                     </select>
                                 </div>
                                 <div class="col-lg-4 col-md-8">
