--- a/templates/predict.html
+++ b/templates/predict.html
@@ -66,7 +66,7 @@
                         <p class="mt-3" style="margin-bottom: unset;">
                             Dataset yang digunakan untuk melakukan prediksi harga komoditas setidaknya memiliki 30 baris
                             data, contoh template bisa di lihat <a
-                                href="{{ url_for('web.download_example_dataset') }}">disini</a>.
+                                href="{{ url_for('config.download_example_dataset') }}">disini</a>.
                         </p>
                     </div>
                     <div class="body" style="margin-top: -20px;">
