--- a/templates/index.html
+++ b/templates/index.html
@@ -22,8 +22,8 @@
             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
                 <div class="card">
                     <div class="header">
-                        <h2>Welcome to Comodity Price Predict - Pasar Kramat Kota Cirebon</h2>
-                        <p class="mt-3" style="margin-bottom: unset;">Comodity Available : Cabai Merah Besar, Cabai
+                        <h2>Selamat Datang ke Website Comodity Price Predict - Pasar Kramat Kota Cirebon</h2>
+                        <p class="mt-3" style="margin-bottom: unset;">Komoditas tersedia : Cabai Merah Besar, Cabai
                             Merah Keriting, Cabai Rawit Hijau, Cabai Rawit Merah, Bawang Merah</p>
                     </div>
                 </div>
