--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -40,7 +40,12 @@
                         </li>
                         <li class="{{ 'active' if active_page == 'predict' else '' }}">
                             <a href="{{ url_for('web.predict') }}" class="menu-toggle">
-                                <i class="zmdi zmdi-chart"></i><span>Predict</span>
+                                <i class="zmdi zmdi-chart"></i><span>Prediksi</span>
+                            </a>
+                        </li>
+                        <li class="{{ 'active' if active_page == 'config' else '' }}">
+                            <a href="{{ url_for('web.config') }}" class="menu-toggle">
+                                <i class="zmdi zmdi-settings"></i><span>Konfigurasi</span>
                             </a>
                         </li>
                     </ul>
