--- a/templates/predict.html
+++ b/templates/predict.html
@@ -22,8 +22,8 @@
             <div class="col-xl-8 col-lg-8 col-md-8 col-sm-8">
                 <div class="card">
                     <div class="header">
-                        <h2>Predict the Comodity Price - Pasar Kramat Kota Cirebon</h2>
-                        <p class="mt-3" style="margin-bottom: unset;">Comodity Available to Predict: Cabai Merah Besar,
+                        <h2>Prediksi Harga Komoditas Pangan - Pasar Kramat Kota Cirebon</h2>
+                        <p class="mt-3" style="margin-bottom: unset;">Komoditas tersedia untuk diprediksi: Cabai Merah Besar,
                             Cabai
                             Merah Keriting, Cabai Rawit Hijau, Cabai Rawit Merah, Bawang Merah</p>
                     </div>
@@ -31,7 +31,7 @@
                         <form method="POST" id="prediction_form">
                             <div class="row clearfix">
                                 <div class="col-lg-4 col-md-8">
-                                    <p> <b>Comodity Name</b> </p>
+                                    <p> <b>Nama Komoditas</b> </p>
                                     <select class="form-control show-tick" name="comodity" id="comodity">
                                         <option value="">-- Pilih --</option>
                                         <option value="bawang_merah">Bawang Merah</option>
@@ -42,7 +42,7 @@
                                     </select>
                                 </div>
                                 <div class="col-lg-4 col-md-8">
-                                    <p> <b>Days Predict</b> </p>
+                                    <p> <b>Berapa Hari di Prediksi</b> </p>
                                     <select class="form-control show-tick" name="days_prediction" id="days_prediction">
                                         <option value="">-- Pilih --</option>
                                         <option value="1">1 Day</option>
