rubah ke bahasa

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
                         <li class="breadcrumb-item"><a href="#">Home</a></li>
                         <li class="breadcrumb-item active">Dashboard</li>
                     </ul>
-                    <h1 class="mb-1 mt-1">Comodity Price Predict - Dashboard</h1>
+                    <h1 class="mb-1 mt-1">Prediksi Harga Komoditas Pangan - Dashboard</h1>
                 </div>
             </div>
         </div>
@@ -22,7 +22,7 @@
             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
                 <div class="card">
                     <div class="header">
-                        <h2>Selamat Datang ke Website Comodity Price Predict - Pasar Kramat Kota Cirebon</h2>
+                        <h2>Selamat Datang ke Website Prediksi Harga Komoditas Pangan - Pasar Kramat Kota Cirebon</h2>
                         <p class="mt-3" style="margin-bottom: unset;">Komoditas tersedia : Cabai Merah Besar, Cabai
                             Merah Keriting, Cabai Rawit Hijau, Cabai Rawit Merah, Bawang Merah</p>
                     </div>
