--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -8,7 +8,7 @@
                         <a href="javascript:void(0);" class="bars"></a>
                         <a class="navbar-brand" href="#"><img
                                 src="{{ url_for('static', filename='assets/images/logo.svg') }}" width="30"
-                                alt="Amaze"><span class="ml-2">Comodity Price Predict</span></a>
+                                alt="Amaze"><span class="ml-2">Prediksi Harga Komoditas Pangan</span></a>
                     </div>
                     <div class="d-flex justify-content-end justify-content-md-between align-items-center flex-grow-1">
                         <div class="d-flex align-items-center currently_maintain hidden-xs"></div>
