--- a/templates/predict.html
+++ b/templates/predict.html
@@ -9,9 +9,9 @@
                 <div class="col-lg-6 col-md-12">
                     <ul class="breadcrumb pl-0 pb-0 ">
                         <li class="breadcrumb-item"><a href="#">Home</a></li>
-                        <li class="breadcrumb-item active">Price Predict</li>
+                        <li class="breadcrumb-item active">Prediksi</li>
                     </ul>
-                    <h1 class="mb-1 mt-1">Comodity Price Predict - Price Predict</h1>
+                    <h1 class="mb-1 mt-1">Prediksi Harga Komoditas Pangan - Prediksi Harga</h1>
                 </div>
             </div>
         </div>
