litle change path upload xlsx

--- a/templates/predict.html
+++ b/templates/predict.html
@@ -328,7 +328,7 @@
             let form_data = new FormData($('#upload_file_form')[0]);
             $.ajax({
                 type: 'POST',
-                url: '/upload-xlsx',
+                url: '/config/upload-xlsx',
                 data: form_data,
                 contentType: false,
                 cache: false,
