change name of breadcrumb

--- a/templates/config.html
+++ b/templates/config.html
@@ -9,7 +9,7 @@
                 <div class="col-lg-6 col-md-12">
                     <ul class="breadcrumb pl-0 pb-0 ">
                         <li class="breadcrumb-item"><a href="#">Home</a></li>
-                        <li class="breadcrumb-item active">Price Predict</li>
+                        <li class="breadcrumb-item active">Konfigurasi</li>
                     </ul>
                     <h1 class="mb-1 mt-1">Prediksi Harga Komoditas Pangan - Konfigurasi</h1>
                 </div>
