--- a/templates/predict.html
+++ b/templates/predict.html
@@ -46,7 +46,7 @@
                                     <select class="form-control show-tick" name="days_prediction" id="days_prediction">
                                         <option value="">-- Pilih --</option>
                                         <option value="1">1 Day</option>
-                                        <option value="3">3 Days</option>
+                                        <option value="3">3 Days (Experimental)</option>
                                     </select>
                                 </div>
                                 <div class="col-lg-4 col-md-8">
@@ -62,7 +62,7 @@
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
                 <div class="card">
                     <div class="header">
-                        <h2>Upload Dataset</h2>
+                        <h2>Perbaharui Dataset Harga</h2>
                         <p class="mt-3" style="margin-bottom: unset;">
                             Dataset yang digunakan untuk melakukan prediksi harga komoditas setidaknya memiliki 30 baris
                             data, contoh template bisa di lihat <a
