--- a/templates/predict.html
+++ b/templates/predict.html
@@ -19,16 +19,42 @@
 
     <div class="container">
         <div class="row clearfix">
+            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
+                <div class="card">
+                    <div class="header">
+                        <h2>Perbaharui Dataset Harga</h2>
+                        <p class="mt-3" style="margin-bottom: unset;">
+                            Dataset yang digunakan untuk melakukan prediksi harga komoditas setidaknya memiliki 30 baris
+                            data, contoh template bisa di lihat <a
+                                href="{{ url_for('config.download_example_dataset') }}">disini</a>.
+                        </p>
+                    </div>
+                    <div class="body" style="margin-top: -20px;">
+                        <div class="row clearfix">
+                            <form id="upload_file_form" method="POST">
+                                <div class="col-sm-12">
+                                    <div class="form-group">
+                                        <input type="file" class="form-control" name="file" id="file" />
+                                    </div>
+                                    <button type="submit"
+                                        class="btn btn-sm btn-raised btn-primary waves-effect" style="margin-left: 280px;">Upload</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="col-xl-8 col-lg-8 col-md-8 col-sm-8">
                 <div class="card">
                     <div class="header">
                         <h2>Prediksi Harga Komoditas Pangan - Pasar Kramat Kota Cirebon</h2>
-                        <p class="mt-3" style="margin-bottom: unset;">Komoditas tersedia untuk diprediksi: Cabai Merah Besar,
+                        <p class="mt-3" style="margin-bottom: unset;">Komoditas tersedia untuk diprediksi: Cabai Merah
+                            Besar,
                             Cabai
                             Merah Keriting, Cabai Rawit Hijau, Cabai Rawit Merah, Bawang Merah</p>
                     </div>
                     <div class="body">
-                        <form method="POST" id="prediction_form">
+                        <form method="POST" id="prediction_form" style="margin-bottom: 10px;">
                             <div class="row clearfix">
                                 <div class="col-lg-4 col-md-8">
                                     <p> <b>Nama Komoditas</b> </p>
@@ -56,31 +82,6 @@
                                 </div>
                             </div>
                         </form>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
-                <div class="card">
-                    <div class="header">
-                        <h2>Perbaharui Dataset Harga</h2>
-                        <p class="mt-3" style="margin-bottom: unset;">
-                            Dataset yang digunakan untuk melakukan prediksi harga komoditas setidaknya memiliki 30 baris
-                            data, contoh template bisa di lihat <a
-                                href="{{ url_for('config.download_example_dataset') }}">disini</a>.
-                        </p>
-                    </div>
-                    <div class="body" style="margin-top: -20px;">
-                        <div class="row clearfix">
-                            <form id="upload_file_form" method="POST">
-                                <div class="col-sm-12">
-                                    <div class="form-group">
-                                        <input type="file" class="form-control" name="file" id="file" />
-                                    </div>
-                                    <button type="submit"
-                                        class="btn btn-sm btn-raised btn-primary waves-effect">Upload</button>
-                                </div>
-                            </form>
-                        </div>
                     </div>
                 </div>
             </div>
