--- a/templates/predict.html
+++ b/templates/predict.html
@@ -71,8 +71,8 @@
                                     <p> <b>Berapa Hari di Prediksi</b> </p>
                                     <select class="form-control show-tick" name="days_prediction" id="days_prediction">
                                         <option value="">-- Pilih --</option>
-                                        <option value="1">1 Day</option>
-                                        <option value="3">3 Days (Experimental)</option>
+                                        <option value="1">1 Hari</option>
+                                        <option value="3">3 Hari (Experimental)</option>
                                     </select>
                                 </div>
                                 <div class="col-lg-4 col-md-8">
